# Peripherals-Talk-V7

./: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
Backend/: .gitignore  README.md  __init__.py  main.py  pyproject.toml
Backend/Additional Information/: Planning.txt  api_list.txt  db.sql  temp.txt  to_start.txt
Backend/api/: __init__.py  admin.py  article.py  auth.py  category.py  comment.py  profile.py  utility.py
Backend/auth/: utilities.py
Backend/core/: __init__.py  config.py
Backend/db/: __init__.py  database.py
Backend/schemas/: article.py  auth.py  base.py  category.py  comment.py  profile.py
Backend/services/cloudinary/: uploader.py
Frontend/: .env.example  .gitignore  .npmrc  .prettierignore  API_CONTRACT.md  AUTHENTICATION_NOTES.md  FIXES.md  FRONTEND_UPDATE_NOTES.md  README.md  VERIFICATION.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-frontend.ps1  start-frontend.ps1  tailwind.config.ts  tsconfig.json
Frontend/src/: proxy.ts
Frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Frontend/src/components/: admin-categories-manager.tsx  admin-editor-requests.tsx  admin-overview.tsx  admin-reports.tsx  admin-users-manager.tsx  api-status.tsx  article-experience.tsx  article-manager.tsx  article-quick-tools.tsx  article-workspace.tsx  auth-form.tsx  auth-page.tsx  brand.tsx  category-grid.tsx  dashboard-page.tsx  dashboard-shell.tsx  editor-request-form.tsx  floating-action-buttons.tsx  footer.tsx  home-published-preview.tsx  home-topic-finder.tsx  math-typeset-content.tsx  (+10 more)
(+93 files in other folders)
